TypeScriptファイルをsrcディレクトリに整理

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
     <h1 class="visually-hidden">Fireworks</h1>
     <canvas id="hanabi"></canvas>
-    <script type="module" src="/fireworks.ts"></script>
+    <script type="module" src="/src/fireworks.ts"></script>
 </body>
 </html>
